feat: Add Jest for testing and update npm scripts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "build": "tsup",
-    "lint": "tsc"
+    "lint": "tsc",
+    "test": "jest"
   },
   "files": [
     "dist/**"
