--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "build": "tsup",
     "lint": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "changeset": "changeset"
   },
   "files": [
     "dist/**"
@@ -39,6 +40,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.7",
     "@jest/globals": "^29.7.0",
     "@total-typescript/tsconfig": "^1.0.4",
     "@types/jest": "^29.5.12",
