--- a/package.json
+++ b/package.json
@@ -34,7 +34,19 @@
     "secure"
   ],
   "author": "Ankit Nakarmi <ankit.nakarmi23@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
+  "homepage": "https://github.com/Nakarmi23/random-string-generator",
+  "bugs": {
+    "email": "ankit.nakarmi23@gmail.com",
+    "url": "https://github.com/Nakarmi23/random-string-generator/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Nakarmi23/random-string-generator.git"
+  },
+  "files": [
+    "dist/**"
+  ],
   "packageManager": "pnpm@8.15.6",
   "engines": {
     "node": ">=18"
