build: Add release script to package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "tsup",
     "lint": "tsc",
     "test": "jest",
-    "changeset": "changeset"
+    "changeset": "changeset",
+    "release": "pnpm build && changeset publish"
   },
   "files": [
     "dist/**"
