--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "changeset": "changeset",
     "release": "pnpm build && changeset publish"
   },
+  "private": false,
   "files": [
     "dist/**"
   ],
